src/com/cadrlife/jhaml/generated/JHamlParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 ../etc/JHaml.g 2010-03-17 12:36:37

package com.cadrlife.jhaml.generated;
import java.util.LinkedHashMap;
import java.util.Map;
import com.cadrlife.jhaml.Helper;
import com.cadrlife.jhaml.JHamlConfig;
import com.cadrlife.jhaml.Line;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all") public class JHamlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEWLINE", "TEXT", "PERCENT", "ID", "FORWARD_SLASH", "INDENTATION", "BEGIN_HASH", "COMMA", "END_HASH", "MAP_TO", "ATTRIBUTE_NAME", "JAVA_CODE", "JAVA_LBRACE", "JAVA_RBRACE", "JAVA_LPAREN", "JAVA_RPAREN", "JAVA_COMMA", "STRING_LITERAL", "CHAR_LITERAL", "HEX_LITERAL", "OCTAL_LITERAL", "DECIMAL_LITERAL", "FLOATING_POINT_LITERAL", "TRUE", "FALSE", "NULL", "DOT", "POUND", "Space", "WS", "WS_WITHIN_HASH", "NL", "IGNORED_NEWLINE", "HEX_DIGIT", "INTEGER_TYPE_SUFFIX", "EXPONENT", "FLOAT_TYPE_SUFFIX", "EscapeSequence", "TextLine", "InLineText", "RemainderOfLineText", "LBRACE", "RBRACE"
    };
    public static final int EXPONENT=39;
    public static final int JAVA_RPAREN=19;
    public static final int END_HASH=12;
    public static final int LBRACE=45;
    public static final int ID=7;
    public static final int EOF=-1;
    public static final int Space=32;
    public static final int STRING_LITERAL=21;
    public static final int FLOATING_POINT_LITERAL=26;
    public static final int COMMA=11;
    public static final int JAVA_COMMA=20;
    public static final int HEX_LITERAL=23;
    public static final int MAP_TO=13;
    public static final int NL=35;
    public static final int DOT=30;
    public static final int JAVA_LPAREN=18;
    public static final int JAVA_RBRACE=17;
    public static final int FLOAT_TYPE_SUFFIX=40;
    public static final int TextLine=42;
    public static final int RBRACE=46;
    public static final int PERCENT=6;
    public static final int IGNORED_NEWLINE=36;
    public static final int POUND=31;
    public static final int NULL=29;
    public static final int OCTAL_LITERAL=24;
    public static final int HEX_DIGIT=37;
    public static final int TEXT=5;
    public static final int InLineText=43;
    public static final int TRUE=27;
    public static final int RemainderOfLineText=44;
    public static final int BEGIN_HASH=10;
    public static final int ATTRIBUTE_NAME=14;
    public static final int WS=33;
    public static final int WS_WITHIN_HASH=34;
    public static final int NEWLINE=4;
    public static final int CHAR_LITERAL=22;
    public static final int JAVA_CODE=15;
    public static final int JAVA_LBRACE=16;
    public static final int FALSE=28;
    public static final int DECIMAL_LITERAL=25;
    public static final int INTEGER_TYPE_SUFFIX=38;
    public static final int EscapeSequence=41;
    public static final int FORWARD_SLASH=8;
    public static final int INDENTATION=9;

    // delegates
    // delegators


        public JHamlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public JHamlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return JHamlParser.tokenNames; }
    public String getGrammarFileName() { return "../etc/JHaml.g"; }


    Helper helper;


    public static class jhamlSource_return extends ParserRuleReturnScope {
        public List<Line> lines;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "jhamlSource"
    // ../etc/JHaml.g:33:1: jhamlSource[JHamlConfig config] returns [List<Line> lines] : ( line[$lines] NEWLINE )+ EOF ;
    public final JHamlParser.jhamlSource_return jhamlSource(JHamlConfig config) throws RecognitionException {
    traceIn("jhamlSource", 1);
        JHamlParser.jhamlSource_return retval = new JHamlParser.jhamlSource_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NEWLINE2=null;
        Token EOF3=null;
        JHamlParser.line_return line1 = null;


        CommonTree NEWLINE2_tree=null;
        CommonTree EOF3_tree=null;


          helper = new Helper(config);
          retval.lines = new ArrayList<Line>();

        try {
            // ../etc/JHaml.g:38:1: ( ( line[$lines] NEWLINE )+ EOF )
            // ../etc/JHaml.g:38:3: ( line[$lines] NEWLINE )+ EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            // ../etc/JHaml.g:38:3: ( line[$lines] NEWLINE )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=NEWLINE && LA1_0<=PERCENT)||LA1_0==INDENTATION||(LA1_0>=DOT && LA1_0<=POUND)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ../etc/JHaml.g:38:4: line[$lines] NEWLINE
            	    {
            	    pushFollow(FOLLOW_line_in_jhamlSource77);
            	    line1=line(retval.lines);

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, line1.getTree());
            	    NEWLINE2=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_jhamlSource80); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    NEWLINE2_tree = (CommonTree)adaptor.create(NEWLINE2);
            	    adaptor.addChild(root_0, NEWLINE2_tree);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_jhamlSource84); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF3_tree = (CommonTree)adaptor.create(EOF3);
            adaptor.addChild(root_0, EOF3_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
    traceOut("jhamlSource", 1);
        }
        return retval;
    }
    // $ANTLR end "jhamlSource"

    protected static class line_scope {
        Line val;
        line_return node;
    }
    protected Stack line_stack = new Stack();

    public static class line_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "line"
    // ../etc/JHaml.g:40:1: line[List<Line> lines] : ( indentation )? ( element | plainText )? ;
    public final JHamlParser.line_return line(List<Line> lines) throws RecognitionException {
    traceIn("line", 2);
        line_stack.push(new line_scope());
        JHamlParser.line_return retval = new JHamlParser.line_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        JHamlParser.indentation_return indentation4 = null;

        JHamlParser.element_return element5 = null;

        JHamlParser.plainText_return plainText6 = null;




        ((line_scope)line_stack.peek()).val = new Line();
        ((line_scope)line_stack.peek()).node = retval; 

        try {
            // ../etc/JHaml.g:54:1: ( ( indentation )? ( element | plainText )? )
            // ../etc/JHaml.g:54:4: ( indentation )? ( element | plainText )?
            {
            root_0 = (CommonTree)adaptor.nil();

            // ../etc/JHaml.g:54:4: ( indentation )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==INDENTATION) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // ../etc/JHaml.g:54:4: indentation
                    {
                    pushFollow(FOLLOW_indentation_in_line107);
                    indentation4=indentation();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, indentation4.getTree());

                    }
                    break;

            }

            // ../etc/JHaml.g:54:17: ( element | plainText )?
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PERCENT||(LA3_0>=DOT && LA3_0<=POUND)) ) {
                alt3=1;
            }
            else if ( (LA3_0==TEXT) ) {
                alt3=2;
            }
            switch (alt3) {
                case 1 :
                    // ../etc/JHaml.g:54:18: element
                    {
                    pushFollow(FOLLOW_element_in_line111);
                    element5=element();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, element5.getTree());

                    }
                    break;
                case 2 :
                    // ../etc/JHaml.g:54:28: plainText
                    {
                    pushFollow(FOLLOW_plainText_in_line115);
                    plainText6=plainText();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, plainText6.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {

              ((line_scope)line_stack.peek()).val.text = input.toString(retval.start,input.LT(-1));
              ((line_scope)line_stack.peek()).val.lineNumber = retval.start.getLine();
              lines.add(((line_scope)line_stack.peek()).val);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
    traceOut("line", 2);
            line_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "line"

    public static class plainText_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "plainText"
    // ../etc/JHaml.g:56:1: plainText : TEXT ;
    public final JHamlParser.plainText_return plainText() throws RecognitionException {
    traceIn("plainText", 3);
        JHamlParser.plainText_return retval = new JHamlParser.plainText_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token TEXT7=null;

        CommonTree TEXT7_tree=null;

        try {
            // ../etc/JHaml.g:56:10: ( TEXT )
            // ../etc/JHaml.g:56:12: TEXT
            {
            root_0 = (CommonTree)adaptor.nil();

            TEXT7=(Token)match(input,TEXT,FOLLOW_TEXT_in_plainText124); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            TEXT7_tree = (CommonTree)adaptor.create(TEXT7);
            adaptor.addChild(root_0, TEXT7_tree);
            }
            if ( state.backtracking==0 ) {
              ((line_scope)line_stack.peek()).val.inLineContent = (TEXT7!=null?TEXT7.getText():null);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
    traceOut("plainText", 3);
        }
        return retval;
    }
    // $ANTLR end "plainText"

    public static class element_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "element"
    // ../etc/JHaml.g:58:1: element : ( PERCENT ( ID )? ( idSpecifier | classSpecifier )* ( attributeHash )? ( selfClose )? ( inLineContent )? | ( idSpecifier | classSpecifier )+ ( attributeHash )? ( selfClose )? ( inLineContent )? );
    public final JHamlParser.element_return element() throws RecognitionException {
    traceIn("element", 4);
        JHamlParser.element_return retval = new JHamlParser.element_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PERCENT8=null;
        Token ID9=null;
        JHamlParser.idSpecifier_return idSpecifier10 = null;

        JHamlParser.classSpecifier_return classSpecifier11 = null;

        JHamlParser.attributeHash_return attributeHash12 = null;

        JHamlParser.selfClose_return selfClose13 = null;

        JHamlParser.inLineContent_return inLineContent14 = null;

        JHamlParser.idSpecifier_return idSpecifier15 = null;

        JHamlParser.classSpecifier_return classSpecifier16 = null;

        JHamlParser.attributeHash_return attributeHash17 = null;

        JHamlParser.selfClose_return selfClose18 = null;

        JHamlParser.inLineContent_return inLineContent19 = null;


        CommonTree PERCENT8_tree=null;
        CommonTree ID9_tree=null;

        try {
            // ../etc/JHaml.g:59:1: ( PERCENT ( ID )? ( idSpecifier | classSpecifier )* ( attributeHash )? ( selfClose )? ( inLineContent )? | ( idSpecifier | classSpecifier )+ ( attributeHash )? ( selfClose )? ( inLineContent )? )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==PERCENT) ) {
                alt13=1;
            }
            else if ( ((LA13_0>=DOT && LA13_0<=POUND)) ) {
                alt13=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }
            switch (alt13) {
                case 1 :
                    // ../etc/JHaml.g:60:3: PERCENT ( ID )? ( idSpecifier | classSpecifier )* ( attributeHash )? ( selfClose )? ( inLineContent )?
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    PERCENT8=(Token)match(input,PERCENT,FOLLOW_PERCENT_in_element143); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PERCENT8_tree = (CommonTree)adaptor.create(PERCENT8);
                    adaptor.addChild(root_0, PERCENT8_tree);
                    }
                    // ../etc/JHaml.g:60:11: ( ID )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==ID) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // ../etc/JHaml.g:60:11: ID
                            {
                            ID9=(Token)match(input,ID,FOLLOW_ID_in_element145); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            ID9_tree = (CommonTree)adaptor.create(ID9);
                            adaptor.addChild(root_0, ID9_tree);
                            }

                            }
                            break;

                    }

                    // ../etc/JHaml.g:60:15: ( idSpecifier | classSpecifier )*
                    loop5:
                    do {
                        int alt5=3;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==DOT) ) {
                            alt5=1;
                        }
                        else if ( (LA5_0==POUND) ) {
                            alt5=2;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // ../etc/JHaml.g:60:16: idSpecifier
                    	    {
                    	    pushFollow(FOLLOW_idSpecifier_in_element149);
                    	    idSpecifier10=idSpecifier();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, idSpecifier10.getTree());

                    	    }
                    	    break;
                    	case 2 :
                    	    // ../etc/JHaml.g:60:30: classSpecifier
                    	    {
                    	    pushFollow(FOLLOW_classSpecifier_in_element153);
                    	    classSpecifier11=classSpecifier();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, classSpecifier11.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);

                    // ../etc/JHaml.g:60:47: ( attributeHash )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==BEGIN_HASH) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // ../etc/JHaml.g:60:47: attributeHash
                            {
                            pushFollow(FOLLOW_attributeHash_in_element157);
                            attributeHash12=attributeHash();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, attributeHash12.getTree());

                            }
                            break;

                    }

                    // ../etc/JHaml.g:60:62: ( selfClose )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==FORWARD_SLASH) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // ../etc/JHaml.g:60:62: selfClose
                            {
                            pushFollow(FOLLOW_selfClose_in_element160);
                            selfClose13=selfClose();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, selfClose13.getTree());

                            }
                            break;

                    }

                    // ../etc/JHaml.g:60:73: ( inLineContent )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==TEXT) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // ../etc/JHaml.g:60:73: inLineContent
                            {
                            pushFollow(FOLLOW_inLineContent_in_element163);
                            inLineContent14=inLineContent();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, inLineContent14.getTree());

                            }
                            break;

                    }

                    if ( state.backtracking==0 ) {
                      ((line_scope)line_stack.peek()).val.tag = (ID9!=null?ID9.getText():null);
                    }

                    }
                    break;
                case 2 :
                    // ../etc/JHaml.g:62:5: ( idSpecifier | classSpecifier )+ ( attributeHash )? ( selfClose )? ( inLineContent )?
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // ../etc/JHaml.g:62:5: ( idSpecifier | classSpecifier )+
                    int cnt9=0;
                    loop9:
                    do {
                        int alt9=3;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==DOT) ) {
                            alt9=1;
                        }
                        else if ( (LA9_0==POUND) ) {
                            alt9=2;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // ../etc/JHaml.g:62:6: idSpecifier
                    	    {
                    	    pushFollow(FOLLOW_idSpecifier_in_element177);
                    	    idSpecifier15=idSpecifier();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, idSpecifier15.getTree());

                    	    }
                    	    break;
                    	case 2 :
                    	    // ../etc/JHaml.g:62:20: classSpecifier
                    	    {
                    	    pushFollow(FOLLOW_classSpecifier_in_element181);
                    	    classSpecifier16=classSpecifier();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, classSpecifier16.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt9 >= 1 ) break loop9;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(9, input);
                                throw eee;
                        }
                        cnt9++;
                    } while (true);

                    // ../etc/JHaml.g:62:37: ( attributeHash )?
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==BEGIN_HASH) ) {
                        alt10=1;
                    }
                    switch (alt10) {
                        case 1 :
                            // ../etc/JHaml.g:62:37: attributeHash
                            {
                            pushFollow(FOLLOW_attributeHash_in_element185);
                            attributeHash17=attributeHash();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, attributeHash17.getTree());

                            }
                            break;

                    }

                    // ../etc/JHaml.g:62:52: ( selfClose )?
                    int alt11=2;
                    int LA11_0 = input.LA(1);

                    if ( (LA11_0==FORWARD_SLASH) ) {
                        alt11=1;
                    }
                    switch (alt11) {
                        case 1 :
                            // ../etc/JHaml.g:62:52: selfClose
                            {
                            pushFollow(FOLLOW_selfClose_in_element188);
                            selfClose18=selfClose();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, selfClose18.getTree());

                            }
                            break;

                    }

                    // ../etc/JHaml.g:62:63: ( inLineContent )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==TEXT) ) {
                        alt12=1;
                    }
                    switch (alt12) {
                        case 1 :
                            // ../etc/JHaml.g:62:63: inLineContent
                            {
                            pushFollow(FOLLOW_inLineContent_in_element191);
                            inLineContent19=inLineContent();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, inLineContent19.getTree());

                            }
                            break;

                    }

                    if ( state.backtracking==0 ) {
                      ((line_scope)line_stack.peek()).val.tag = "div";
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {
              ((line_scope)line_stack.peek()).val.isElement = true;
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
    traceOut("element", 4);
        }
        return retval;
    }
    // $ANTLR end "element"

    public static class selfClose_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selfClose"
    // ../etc/JHaml.g:65:1: selfClose : FORWARD_SLASH ;
    public final JHamlParser.selfClose_return selfClose() throws RecognitionException {
    traceIn("selfClose", 5);
        JHamlParser.selfClose_return retval = new JHamlParser.selfClose_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token FORWARD_SLASH20=null;

        CommonTree FORWARD_SLASH20_tree=null;

        try {
            // ../etc/JHaml.g:65:10: ( FORWARD_SLASH )
            // ../etc/JHaml.g:65:12: FORWARD_SLASH
            {
            root_0 = (CommonTree)adaptor.nil();

            FORWARD_SLASH20=(Token)match(input,FORWARD_SLASH,FOLLOW_FORWARD_SLASH_in_selfClose206); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            FORWARD_SLASH20_tree = (CommonTree)adaptor.create(FORWARD_SLASH20);
            adaptor.addChild(root_0, FORWARD_SLASH20_tree);
            }
            if ( state.backtracking==0 ) {
              ((line_scope)line_stack.peek()).val.isSelfClosing = true;
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
